# liblzf-cmake

./: CMakeLists.txt  README.md
src/: lzf_c.c
